# inf3203

./: README.md  README.template.md
.github/workflows/: release.yml
INF-3203_Assignment/: .gitignore  README.md  batch_classify.py  requirements.txt
src/: run-node.sh  run.sh
src/aika-node/: Cargo.toml
src/aika-node/src/: agent.rs  cluster_controller.rs  common.rs  local_controller.rs  main.rs
src/aika-node/src/raft/: log.rs  mod.rs  replication.rs  storage.rs
src/aika-node/src/raft/tests/: election_tests.rs  log_tests.rs  mock_transport.rs
src/deploy/src/: dashboard.rs  main.rs
